# mcp-odoo

./: .importlinter  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  glama.json  pyproject.toml  server.json
.github/workflows/: publish.yml
docs/: adding-a-tool.md  claude-desktop-connector.md  comparison.md  data-quality.md  plugins.md
examples/plugin-example/: README.md  pyproject.toml
examples/plugin-example/odoo_mcp_plugin_example/: plugin.py
mcpb/: manifest.template.json
scripts/: build_mcpb.py  odoo_compose_smoke.py
site/: index.html
skills/: README.md
skills/odoo-agency-fleet-review/: SKILL.md
skills/odoo-data-quality-gate/: SKILL.md
skills/odoo-migration-copilot/: SKILL.md
skills/odoo-month-end-close/: SKILL.md
src/odoo_mcp/: __main__.py  agent_tools.py  auth.py  data_quality.py  diagnostics.py  odoo_client.py  plugin_api.py  prompts_workflows.py  schemas.py  server.py  server_core.py  tool_helpers.py  tools_async.py  tools_data_quality.py  tools_diagnostics.py  tools_read.py  tools_write.py
src/odoo_mcp/data/: odoo_renames.json
tests/: test_agent_tools.py  test_attachment_upload.py  test_auth.py  test_data_quality.py  test_diagnostics.py  test_migration_workbench.py  test_odoo_client.py  test_plugins.py  test_schemas.py  test_server.py  test_workflow_prompts.py
